manifests/automation/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: crud-golang
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: naveenhiremath28/app-golang:1.0.0
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: crud-golang
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
