manifests/automation/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: crud-golang
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.5
          args: ["start-dev", "--import-realm", "--health-enabled=true"]

          ports:
            - containerPort: 8080

          volumeMounts:
            - name: realm-file
              mountPath: /opt/keycloak/data/import
              readOnly: true

      volumes:
        - name: realm-file
          configMap:
            name: keycloak-realm

---

apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: crud-golang
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
