manifests/automation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: crud-golang
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
