manifests/automation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: crud-golang
spec:
  ingressClassName: nginx
  rules:
    - host: app.local
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 8000
    - host: app.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
